Fix no botão de sintomas

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,7 +108,8 @@ nav ul li a:hover {
   font-weight: 400;
 }
 
-.hero-content button {
+.hero-content a {
+  text-decoration: none;
   padding: 15px 20px;
   border-radius: 20px;
   margin: 16px 0;
