--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,7 @@ nav ul li a:hover {
 
 .hero-content a {
   text-decoration: none;
+  display: block;
   padding: 15px 20px;
   border-radius: 20px;
   margin: 16px 0;
