Fix no botão de sintomas v3

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,7 @@ nav ul li a:hover {
 
 .hero-content button a {
   text-decoration: none;
+  color: #fafafa;
 }
 .hero-content button {
   padding: 15px 20px;
