--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,7 +115,7 @@ nav ul li a:hover {
 .hero-content button {
   padding: 15px 20px;
   border-radius: 20px;
-  margin: 16px 0;
+  margin: 24px 0;
   background-color: rgba(255, 48, 48, 0.671);
   color: #f6f6f6;
   box-shadow: 0 0 20px rgba(255, 48, 48, 0.144);
@@ -176,10 +176,11 @@ nav ul li a:hover {
   display: flex;
   flex-wrap: wrap;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-  grid-auto-rows: minmax(150px, auto);
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-auto-rows: minmax(430px, auto);
+  grid-auto-flow: dense;
   border-top: 1px solid #9acd32;
-  padding: 64px 0;
+  padding-top: 64px;
   margin-top: 90px;
 }
 
@@ -188,6 +189,15 @@ nav ul li a:hover {
   padding: 20px;
   box-shadow: 0 0 20px rgba(20, 20, 20, 0.1);
   border-radius: 3px;
+  position: relative;
+}
+.news-item:nth-child(3n) {
+  grid-column: 1 / -1;
+  padding: 32px;
+}
+
+.news-item:nth-child(3n) a {
+  left: 32px;
 }
 
 .news-item h3 {
@@ -201,13 +211,18 @@ nav ul li a:hover {
 .news-item p {
   color: #2e2e30;
   line-height: 1.5;
+  padding: 16px 0;
 }
 
 .news-item a {
   display: inline-block;
   text-decoration: none;
+  font-size: 1.2rem;
   margin-top: 16px;
   color: #9acd32;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
 
 .news-item iframe {
@@ -350,6 +365,10 @@ footer div {
     align-self: flex-start;
   }
   
+  .more-container ul {
+    max-width: 350px;
+  }
+
   .hero img {
     display: block;
     justify-self: center;
@@ -418,5 +437,7 @@ footer div {
     grid-template-columns: 1fr;
   }
 
-
+  .more-container img {
+    max-width: 350px;
+  }
 }
